feat: Add base template and chapter detail layout
- Created a base HTML template with responsive design using Tailwind CSS.
- Implemented a header with navigation, theme toggle, and mobile menu functionality.
- Added chapter detail template extending the base template, including breadcrumb navigation, hero section, audio player, and image gallery with GLightbox integration.
- Developed index page with a hero section promoting the stories.
- Configured Vite for server-side history API fallback to support chapter routing.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,29 @@
 .DS_Store
 llm_analyzer.log
 scripts/llm_analyzer.log
+
+# Python artifacts
+*.pyc
+__pycache__/
+.mypy_cache/
+.coverage
+
+# Node modules
+node_modules/
+
+# Build outputs
+dist/
+build/
+
+# IDE/config files
+.vscode/
+.idea/
+
+# Dependency directories
+venv/
+
+# Local overrides
+override*
+
+# Debug files
+debug*.json
